HTMLOptionElement::defaultSelected should affect selection state of other option elements

HTMLOptionElement::defaultSelected should affect selection state of other option elements
https://bugs.webkit.org/show_bug.cgi?id=119291

Reviewed by NOBODY (OOPS!).

Partial Merge - https://chromium.googlesource.com/chromium/blink/+/e8f0337fdc86554b48cf81d7ed8c286f251d2405 & https://chromium.googlesource.com/chromium/src.git/+/4288626a69e2e6426555bb174a99e555e174f755

According to the standard, we should set selectedness to true if defaultSelected
is set to true, and we should not set selectedness to false if defaultSelected
is set to false because the standard says nothing about it.

[1]
> Whenever an option element's selected attribute is added, its selectedness
> must be set to true.

When the selectedness of an option is udpated, other options's selectedness
should become false.

[2]
> If the multiple attribute is absent, whenever an option element in the select
> element's list of options has its selectedness set to true, and whenever an
> option element with its selectedness set to true is added to the select
> element's list of options, the user agent must set the selectedness of all the
> other option elements in its list of options to false.

The old behavior doesn't match to the standard and any other browsers.
The new behavior matches to IE10, Chrome, Gecko and the standard.

Further, OPTION element should update its selectedness only if selected attribute is added or removed.

* Source/WebCore/html/HTMLOptionElement.h: Add extra argument to "parseAttribute"
* Source/WebCore/html/HTMLOptionElement.cpp
(HTMLOptionElement::parseAttribute): Add 'if' logic for selectedness, which will be used for "setSelectedState" and also remove FIXME
* LayoutTests/fast/forms/select/option-defaultselected-expected.txt: Added Expectations
* LayoutTests/fast/forms/select/option-defaultselected.html: Added Test Case